--- a/index.html
+++ b/index.html
@@ -14,6 +14,80 @@
     <title>Software Developer Portfolio</title>
   </head>
   <body>
+    <header>
+      <nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top">
+        <div class="container-fluid px-5">
+          <a class="navbar-brand ms-5" href="/">
+            <img src="images/logo.svg" alt="" />
+          </a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div
+            class="collapse navbar-collapse justify-content-end me-5"
+            id="navbarNav"
+          >
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#porfolio"
+                  >Portfolio</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#about">About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#contact">Contact</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header>
+    <div>
+      <div class="p-5 d-flex justify-content-center align-items-center row">
+        <section class="p-5 m-5 col-8">
+          <h1>
+            I’m Alexandra<br />
+            Glad to see you!
+          </h1>
+          <p class="py-3">
+            I’m a software developer! I can help you build a product , feature
+            or website Look through some of my work and experience! If you like
+            what you see and have a project you need coded, don’t hestiate to
+            contact me.
+          </p>
+          <a href="#connect" class="text-decoration-none">
+            <h6 class="text-primary">LET'S CONNECT</h6>
+          </a>
+          <div class="d-flex flex-wrap align-items-center">
+            <a href="https://twitter.com" class="m-2">
+              <img src="images/icons/twitter.svg" alt="Twitter Profile" />
+            </a>
+            <a href="https://linkedIn.com" class="m-2">
+              <img src="images/icons/linkedin.svg" alt="LinkedIn Profile" />
+            </a>
+            <a href="https://medium.com" class="m-2">
+              <img src="images/icons/medium.svg" alt="Medium Profile" />
+            </a>
+            <a href="https://github.com" class="m-2">
+              <img src="images/icons/github.svg" alt="Github Profile" />
+            </a>
+            <a href="https://angellist.com" class="m-2">
+              <img src="images/icons/angel-list.svg" alt="Angel List Profile" />
+            </a>
+          </div>
+        </section>
+      </div>
+    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
