Add background image

--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
       integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
       crossorigin="anonymous"
     />
+    <link href="index.css" rel="stylesheet" />
 
     <title>Software Developer Portfolio</title>
   </head>
-  <body>
+  <body class="bg-light">
     <header>
       <nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top">
         <div class="container-fluid px-5">
@@ -53,8 +54,17 @@
       </nav>
     </header>
     <div>
-      <div class="p-5 d-flex justify-content-center align-items-center row">
-        <section class="p-5 m-5 col-8">
+      <div
+        class="
+          p-5
+          d-flex
+          justify-content-center
+          align-items-center
+          row
+          headline-container
+        "
+      >
+        <section class="p-5 m-5 col-8 headline">
           <h1>
             I’m Alexandra<br />
             Glad to see you!
