Add project cards

--- a/index.html
+++ b/index.html
@@ -97,6 +97,171 @@
           </div>
         </section>
       </div>
+
+      <div class="container p-5">
+        <div class="row gy-5">
+          <div class="card">
+            <div class="row p-2">
+              <div class="col-lg-6">
+                <img
+                  src="images/snapshots/tonic.svg"
+                  alt="Snapshot of project"
+                  class="card-img"
+                />
+              </div>
+              <div class="col-lg-6">
+                <div class="card-body p-2">
+                  <h3 class="card-title">Tonic</h3>
+                  <div class="d-flex flex-wrap align-items-center mb-4">
+                    <small class="fw-bolder text-secondary">CANOPY</small>
+                    <small class="text-secondary p-2">&#9679;</small>
+                    <small class="text-secondary">Back End Dev</small>
+                    <small class="text-secondary p-2">&#9679;</small>
+                    <small class="text-secondary">2015</small>
+                  </div>
+                  <p class="card-text">
+                    A daily selection of privately personalized reads; no
+                    accounts or sign-ups required.
+                  </p>
+                  <div class="mb-4">
+                    <span class="badge bg-primary">html</span>
+                    <span class="badge bg-primary">css</span>
+                    <span class="badge bg-primary">javaScript</span>
+                  </div>
+                  <button type="button" class="btn btn-outline-primary">
+                    See Project
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="container p-5">
+        <div class="row gy-5">
+          <div class="card">
+            <div class="row p-2">
+              <div class="col-lg-6 py-3 order-lg-1">
+                <img
+                  src="images/snapshots/stories.svg"
+                  alt="Snapshot of project"
+                  class="card-img"
+                />
+              </div>
+              <div class="col-lg-6">
+                <div class="card-body py-5">
+                  <h3 class="card-title">Multi-Post Stories</h3>
+                  <div class="d-flex flex-wrap align-items-center mb-4">
+                    <small class="fw-bolder text-secondary">FACEBOOK</small>
+                    <small class="text-secondary p-2">&#9679;</small>
+                    <small class="text-secondary">Full Stack Dev</small>
+                    <small class="text-secondary p-2">&#9679;</small>
+                    <small class="text-secondary">2015</small>
+                  </div>
+                  <p class="card-text">
+                    Experimental content creation feature that allows users to
+                    add to an existing story over the course of a day without
+                    spamming their friends.
+                  </p>
+                  <div class="mb-4">
+                    <span class="badge bg-primary">html</span>
+                    <span class="badge bg-primary">Ruby on rails</span>
+                    <span class="badge bg-primary">css</span>
+                    <span class="badge bg-primary">javaScript</span>
+                  </div>
+                  <button type="button" class="btn btn-outline-primary">
+                    See Project
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="container p-5">
+        <div class="row gy-5">
+          <div class="card">
+            <div class="row p-2">
+              <div class="col-lg-6 py-3">
+                <img
+                  src="images/snapshots/facebook.svg"
+                  alt="Snapshot of project"
+                  class="card-img"
+                />
+              </div>
+              <div class="col-lg-6">
+                <div class="card-body py-3">
+                  <h3 class="card-title">Facebook 360</h3>
+                  <div class="d-flex flex-wrap align-items-center mb-4">
+                    <small class="fw-bolder text-secondary">FACEBOOK</small>
+                    <small class="text-secondary p-2">&#9679;</small>
+                    <small class="text-secondary">Back End Dev</small>
+                    <small class="text-secondary p-2">&#9679;</small>
+                    <small class="text-secondary">2015</small>
+                  </div>
+                  <p class="card-text">
+                    Exploring the future of media in Facebook's first Virtual
+                    Reality app; a place to discover and enjoy 360 photos and
+                    videos on Gear VR.
+                  </p>
+                  <div class="mb-4">
+                    <span class="badge bg-primary">html</span>
+                    <span class="badge bg-primary">Ruby on rails</span>
+                    <span class="badge bg-primary">css</span>
+                    <span class="badge bg-primary">javaScript</span>
+                  </div>
+                  <button type="button" class="btn btn-outline-primary">
+                    See Project
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="container p-5">
+        <div class="row gy-5">
+          <div class="card">
+            <div class="row p-2">
+              <div class="col-lg-6 py-3 order-lg-1">
+                <img
+                  src="images/snapshots/uber.svg"
+                  alt="Snapshot of project"
+                  class="card-img"
+                />
+              </div>
+              <div class="col-lg-6">
+                <div class="card-body py-5">
+                  <h3 class="card-title">Uber Navigation</h3>
+                  <div class="d-flex flex-wrap align-items-center mb-4">
+                    <small class="fw-bolder text-secondary">Uber</small>
+                    <small class="text-secondary p-2">&#9679;</small>
+                    <small class="text-secondary">Lead Developer</small>
+                    <small class="text-secondary p-2">&#9679;</small>
+                    <small class="text-secondary">2018</small>
+                  </div>
+                  <p class="card-text">
+                    A smart assistant to make driving more safe, efficient, and
+                    fun by unlocking your most expensive computer: your car.
+                  </p>
+                  <div class="mb-4">
+                    <span class="badge bg-primary">html</span>
+                    <span class="badge bg-primary">Ruby on rails</span>
+                    <span class="badge bg-primary">css</span>
+                    <span class="badge bg-primary">javaScript</span>
+                  </div>
+                  <button type="button" class="btn btn-outline-primary">
+                    See Project
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
