Add about myself section structure

--- a/index.html
+++ b/index.html
@@ -266,6 +266,124 @@
         </div>
       </div>
     </div>
+
+    <div class="container-fluid about p-5">
+      <div class="row p-5">
+        <div class="col-lg-5">
+          <h1>
+            About<br />
+            Myself
+          </h1>
+          <p class="py-3">
+            Hello I’m a software developer! I can help you build a product ,
+            feature or website Look through some of my work and experience! If
+            you like what you see and have a project you need coded, don’t
+            hestiate to contact me.
+          </p>
+          <a href="#connect" class="text-decoration-none">
+            <h6 class="text-primary">LET'S CONNECT</h6>
+          </a>
+          <div class="d-flex flex-wrap align-items-center">
+            <a href="https://github.com" class="m-2">
+              <img src="images/icons/github.svg" alt="Github Profile" />
+            </a>
+            <a href="https://linkedIn.com" class="m-2">
+              <img src="images/icons/linkedin.svg" alt="LinkedIn Profile" />
+            </a>
+            <a href="https://angellist.com" class="m-2">
+              <img src="images/icons/angel-list.svg" alt="Angel List Profile" />
+            </a>
+            <a href="https://twitter.com" class="m-2">
+              <img src="images/icons/twitter.svg" alt="Twitter Profile" />
+            </a>
+            <a href="https://medium.com" class="m-2">
+              <img src="images/icons/medium.svg" alt="Medium Profile" />
+            </a>
+          </div>
+          <button type="button" class="btn btn-outline-primary mt-4">
+            Get My Resume
+          </button>
+        </div>
+        <div class="col-lg-7">
+          <div>
+            <div class="d-flex justify-content-between p-3">
+              <h6>Languages</h6>
+              <img src="images/icons/chevron-down.svg" alt="Minimize" />
+            </div>
+            <div class="row pt-3">
+              <div
+                class="
+                  d-flex
+                  col-12 col-lg
+                  flex-lg-column
+                  justify-content-lg-center
+                  align-items-center
+                  bg-light
+                  p-2
+                  m-2
+                "
+              >
+                <img
+                  src="images/icons/js.svg"
+                  alt="JS"
+                  width="48"
+                  height="48"
+                />
+                <p class="p-3">javaScript</p>
+              </div>
+              <div
+                class="
+                  d-flex
+                  col-12 col-lg
+                  flex-lg-column
+                  justify-content-lg-center
+                  align-items-center
+                  bg-light
+                  p-2
+                  m-2
+                "
+              >
+                <img
+                  src="images/icons/html5.svg"
+                  alt="HTML"
+                  width="48"
+                  height="48"
+                />
+                <p class="p-3">HTML</p>
+              </div>
+              <div
+                class="
+                  d-flex
+                  col-12 col-lg
+                  flex-lg-column
+                  justify-content-lg-center
+                  align-items-center
+                  bg-light
+                  p-2
+                  m-2
+                "
+              >
+                <img
+                  src="images/icons/css.svg"
+                  alt="CSS"
+                  width="48"
+                  height="48"
+                />
+                <p class="p-3">CSS</p>
+              </div>
+            </div>
+          </div>
+          <div class="d-flex justify-content-between border-bottom p-3 mt-4">
+            <h6>Frameworks</h6>
+            <img src="images/icons/chevron-right.svg" alt="Minimize" />
+          </div>
+          <div class="d-flex justify-content-between border-bottom p-3 mt-4">
+            <h6>Skills</h6>
+            <img src="images/icons/chevron-right.svg" alt="Minimize" />
+          </div>
+        </div>
+      </div>
+    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
