--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
       </div>
     </div>
 
-    <div class="container-fluid about p-5">
+    <div id="about" class="container-fluid about p-5">
       <div class="row p-5">
         <div class="col-lg-5">
           <h1>
@@ -384,6 +384,66 @@
         </div>
       </div>
     </div>
+
+    <footer id="contact" class="bg-white p-5">
+      <div
+        class="
+          footer-content
+          row
+          h-100
+          justify-content-center
+          align-items-center
+          p-5
+        "
+      >
+        <section class="col-lg-6 p-5">
+          <h2 class="text-white text-center">Contact me</h2>
+          <p class="text-white text-center">
+            If you have an application you are interested in developing, a
+            feature that you need built or a project that needs coding. I’d love
+            to help with it
+          </p>
+          <form method="POST" action="/submit">
+            <div class="mb-3">
+              <input
+                type="text"
+                class="form-control"
+                id="name"
+                name="name"
+                placeholder="Type your name"
+                required
+                minlength="30"
+              />
+            </div>
+            <div class="mb-3">
+              <input
+                type="email"
+                class="form-control"
+                id="email"
+                name="email"
+                placeholder="name@example.com"
+                required
+              />
+            </div>
+            <div class="mb-3">
+              <textarea
+                class="form-control"
+                id="message"
+                rows="3"
+                placeholder="Write your message here"
+                minlength="500"
+                required
+              ></textarea>
+            </div>
+            <div class="mb-3 d-flex justify-content-lg-center">
+              <button type="submit" class="btn btn-light text-primary">
+                Get In Touch
+              </button>
+            </div>
+          </form>
+        </section>
+      </div>
+    </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
