--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
                 class="form-control"
                 id="email"
                 name="email"
-                placeholder="name@example.com"
+                placeholder="Type your email"
                 required
               />
             </div>
