--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
             feature that you need built or a project that needs coding. I’d love
             to help with it
           </p>
-          <form method="POST" action="/submit">
+          <form method="POST" action="https://formspree.io/f/mgerkggg">
             <div class="mb-3">
               <input
                 type="text"
